tests/tests/c_docs_none.h

typedef enum enumdocumented
    {
    ENUMDOCUMENTED_A = 0,
    ENUMDOCUMENTED_B = 1,
    ENUMDOCUMENTED_C = 2,
    } enumdocumented;
typedef enum enumrenamed
    {
    ENUMRENAMED_X = 0,
    } enumrenamed;
typedef struct generic2u8 generic2u8;
typedef struct generic3 generic3;
typedef struct generic4 generic4;
typedef enum ffierror
    {
    FFIERROR_OK = 0,
    FFIERROR_NULL = 100,
    FFIERROR_PANIC = 200,
    FFIERROR_DELEGATE = 300,
    FFIERROR_FAIL = 400,
    } ffierror;
typedef struct booleanalignment
    {
    int32_t a;
    int16_t b;
    int16_t c;
    uint8_t d;
    uint8_t e;
    uint8_t f;
    uint8_t g;
    uint8_t h;
    uint8_t i;
    uint8_t j;
    uint8_t k;
    uint64_t id;
    bool is_valid;
    uint64_t datum;
    } booleanalignment;
typedef struct packed1
    {
    uint8_t x;
    uint16_t y;
    } packed1;
typedef struct packed2
    {
    uint16_t y;
    uint8_t x;
    } packed2;
typedef struct phantomu8
    {
    uint32_t x;
    } phantomu8;
typedef struct structdocumented
    {
    float x;
    } structdocumented;
typedef struct structrenamed
    {
    enumrenamed e;
    } structrenamed;
typedef struct tupled
    {
    uint8_t x0;
    } tupled;
typedef struct useasciistringpattern
    {
    const char* ascii_string;
    } useasciistringpattern;
typedef struct vec
    {
    double x;
    double z;
    } vec;
typedef struct vec1
    {
    float x;
    float y;
    } vec1;
typedef struct vec2
    {
    double x;
    double z;
    } vec2;
typedef struct vec3f32
    {
    float x;
    float y;
    float z;
    } vec3f32;
typedef struct visibility1
    {
    uint8_t pblc;
    uint8_t prvt;
    } visibility1;
typedef struct visibility2
    {
    uint8_t pblc1;
    uint8_t pblc2;
    } visibility2;
typedef struct weird1u32
    {
    uint32_t x;
    } weird1u32;
typedef uint8_t (*fptr_fn_u8_rval_u8)(uint8_t x0);
typedef struct array
    {
    uint8_t data[16];
    } array;
typedef struct genericu32
    {
    const uint32_t* x;
    } genericu32;
typedef struct genericu8
    {
    const uint8_t* x;
    } genericu8;
typedef struct weird2u8
    {
    uint8_t t;
    uint8_t a[5];
    const uint8_t* r;
    } weird2u8;
typedef struct sliceu32
    {
    const uint32_t* data;
    uint64_t len;
    } sliceu32;
typedef struct optionvec
    {
    vec t;
    uint8_t is_some;
    } optionvec;
typedef struct sliceuseasciistringpattern
    {
    const useasciistringpattern* data;
    uint64_t len;
    } sliceuseasciistringpattern;
typedef struct slicevec
    {
    const vec* data;
    uint64_t len;
    } slicevec;
typedef struct slicemutvec
    {
    const vec* data;
    uint64_t len;
    } slicemutvec;
void primitive_void();
void primitive_void2();
bool primitive_bool(bool x);
uint8_t primitive_u8(uint8_t x);
uint16_t primitive_u16(uint16_t x);
uint32_t primitive_u32(uint32_t x);
uint64_t primitive_u64(uint64_t x);
int8_t primitive_i8(int8_t x);
int16_t primitive_i16(int16_t x);
int32_t primitive_i32(int32_t x);
int64_t primitive_i64(int64_t x);
booleanalignment boolean_alignment(booleanalignment x);
booleanalignment boolean_alignment2(bool rval);
packed2 packed_to_packed1(packed1 a);
int64_t many_args_5(int64_t x0, int64_t x1, int64_t x2, int64_t x3, int64_t x4);
int64_t many_args_10(int64_t x0, int64_t x1, int64_t x2, int64_t x3, int64_t x4, int64_t x5, int64_t x6, int64_t x7, int64_t x8, int64_t x9);
const int64_t* ptr(const int64_t* x);
int64_t* ptr_mut(int64_t* x);
const const int64_t** ptr_ptr(const const int64_t** x);
const int64_t* ref_simple(const int64_t* x);
int64_t* ref_mut_simple(int64_t* x);
bool ref_option(const int64_t* x);
bool ref_mut_option(int64_t* x);
tupled call_tupled(tupled x);
ffierror complex_args_1(vec3f32 a, const tupled* b);
uint8_t callback(fptr_fn_u8_rval_u8 callback, uint8_t value);
uint32_t generic_1a(genericu32 x, phantomu8 y);
uint8_t generic_1b(genericu8 x, phantomu8 y);
uint8_t generic_1c(const genericu8* x, const genericu8* y);
uint8_t generic_2(const generic2u8* x);
uint8_t generic_3(const generic3* x);
uint8_t generic_4(const generic4* x);
uint8_t array_1(array x);
enumdocumented documented(structdocumented x);
vec1 ambiguous_1(vec1 x);
vec2 ambiguous_2(vec2 x);
bool ambiguous_3(vec1 x, vec2 y);
vec namespaced_type(vec x);
optionvec namespaced_inner_option(optionvec x);
slicevec namespaced_inner_slice(slicevec x);
slicemutvec namespaced_inner_slice_mut(slicemutvec x);
ffierror panics();
enumrenamed renamed(structrenamed x);
void sleep(uint64_t millis);
bool weird_1(weird1u32 x, weird2u8 y);
void visibility(visibility1 x, visibility2 y);
tupled repr_transparent(tupled x, const tupled* r);
uint32_t pattern_ascii_pointer_1(const char* x);
const char* pattern_ascii_pointer_2();
uint32_t pattern_ascii_pointer_len(const char* x, useasciistringpattern y);
sliceuseasciistringpattern pattern_ascii_pointer_return_slice();
uint32_t pattern_ffi_slice_1(sliceu32 ffi_slice);
uint64_t pattern_api_guard();